# machines

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  _clang-format  machstrg.xml
src/: CMakeLists.txt
src/libdev/afx/: AfxConfiguration.cpp  AfxConfiguration.hpp  AfxConfigurationData.hpp  AfxConfigurationLoader.cpp  AfxConfigurationLoader.hpp  AfxSdlApp.cpp  AfxSdlApp.hpp  CMakeLists.txt  app.cpp  app.hpp  castfns.hpp  dosapp.hpp  invkargs.cpp  invkargs.hpp  osapp.hpp  printmsg.hpp  resource.cpp  resource.hpp  singapp.hpp  slimwin.hpp  win95app.hpp
src/libdev/ani/: AniSmacker.hpp  AniSmackerCutscene.cpp  AniSmackerCutscene.hpp  AniSmackerRegular.cpp  AniSmackerRegular.hpp  CMakeLists.txt  FrameScaler.cpp  FrameScaler.hpp
src/libdev/base/: CMakeLists.txt  DiagStreamType.hpp  IProgressReporter.hpp  PersistenceHackyPacker.hpp  appbuff.cpp  append.cpp  base.cpp  base.hpp  basver.cpp  cballoc.cpp  cballoc.hpp  compiler.hpp  crashi.cpp  cstrbuff.cpp  diag.cpp  diag.hpp  diagint.cpp  diagstr.cpp  diagstrs.cpp  error.cpp  error.hpp  filtbuff.cpp  filter.cpp  hungaria.hpp  indent.cpp  infsbuff.cpp  istr.cpp  istr.hpp  istrbuff.cpp  istrimpl.cpp  istrrep.cpp  istrrep.hpp  lessptr.hpp  logbuff.cpp  logbuff.hpp  lstrbuff.cpp  memcdata.cpp  memcdata.hpp  memchk.cpp  memchk.hpp  (+21 more)
src/libdev/ctl/: CMakeLists.txt  TFlag.hpp  algorith.hpp  bitvec.cpp  bitvec.hpp  bitvec.ipp  countptr.cpp  countptr.ctf  countptr.ctp  countptr.hpp  deque.ctf  deque.hpp  erase.hpp  fixedvec.ctf  fixedvec.hpp  function.hpp  list.ctf  list.hpp  list.itf  map.hpp  mmvector.hpp  nbvector.ctf  nbvector.hpp  pvector.ctf  pvector.hpp  queue.hpp  set.hpp  utility.hpp  vector.ctf  vector.hpp
src/libdev/device/: CMakeLists.txt  DevCDImpl.hpp  SdlDelegate.hpp  butevent.cpp  butevent.hpp  cd.cpp  cd.hpp  cd_helper.cpp  cd_helper.hpp  cddefs.hpp  cdlist.cpp  cdlist.hpp  commouse.cpp  eventq.cpp  eventq.hpp  key.hpp  keyboard.hpp  keycomnd.cpp  keycomnd.hpp  keytrans.cpp  keytrans.hpp  mouse.hpp  rate.cpp  rate.hpp  sdlkeybd.cpp  sdlmouse.cpp  sdltime.cpp  sdltimei.cpp  shrkeybd.cpp  shrmouse.cpp  time.cpp  time.hpp  timer.cpp  timer.hpp
src/libdev/envirnmt/: CMakeLists.txt  elevclut.cpp  elevclut.hpp  elevmatp.cpp  elevmatp.hpp  lexer.cpp  orbit.cpp  orbit.hpp  orbparam.cpp  parser.cpp  planet.cpp  planet.hpp  plaparse.cpp  satelite.cpp  satelite.hpp  satparam.cpp  sky.cpp  sky.hpp  sky.ipp  skydecl.cpp  skyline.cpp  skyline.hpp  ti_clut.cpp  ti_map1.cpp  ti_map2.cpp
src/libdev/ftl/: CMakeLists.txt  collect.hpp  contain.hpp  ftl.hpp  map.hpp  reuidgen.hpp  serialid.hpp  seriamap.ctp  seriamap.hpp  seriamap.itp  seripmap.ctp  seripmap.hpp  seripmap.itp
src/libdev/graph/: CMakeLists.txt  arc.ctp  arc.hpp  astaralg.ctp  astaralg.hpp  astaralg_templates.hpp  astarvtx.ctp  astarvtx.hpp  astarvtx_inline_templates.hpp  astarvtx_templates.hpp  base.ctp  base.hpp  base_templates.hpp  graph.hpp  graph_templates.hpp  path.ctp  path.hpp  path_templates.hpp  vertex.hpp  vertex_templates.hpp
src/libdev/gui/: Action.cpp  Action.hpp  CMakeLists.txt  KeyWithModifiers.hpp  RootSharedBitmaps.cpp  RootSharedBitmaps.hpp  border.cpp  border.hpp  button.cpp  button.hpp  displaya.cpp  displaya.hpp  editbox.cpp  editbox.hpp  event.cpp  event.hpp  font.cpp  font.hpp  gui.cpp  gui.hpp  guiver.cpp  icon.cpp  icon.hpp  iconseq.cpp  iconseq.hpp  image.cpp  image.hpp  listobvr.cpp  listobvr.hpp  manager.cpp  manager.hpp  mouse.cpp  mouse.hpp  painter.cpp  painter.hpp  progress.cpp  progress.hpp  restring.cpp  restring.hpp  root.cpp  (+12 more)
src/libdev/gxin/: gx.hpp  gxcolor.cpp  gxcolor.hpp  gxdata.hpp  gxerror.cpp  gxerror.hpp  gxfile.cpp  gxfile.hpp  gxgen.hpp  gxhier.cpp  gxhier.hpp  gxidpos.cpp  gxidpos.hpp  gxlabel.cpp  gxlabel.hpp  gxmat.cpp  gxmat.hpp  gxmatrix3.cpp  gxmatrix3.hpp  gxmesh.cpp  gxmesh.hpp  gxname.hpp  gxpoint3.cpp  gxpoint3.hpp  gxpolygon3.cpp  gxpolygon3.hpp  gxpolyvert3.cpp  gxpolyvert3.hpp  gxtexture.cpp  gxtexture.hpp  gxtextures.hpp  gxuvcoords.cpp  gxuvcoords.hpp  gxvect3.cpp  gxvect3.hpp  gxvect4.cpp  gxvect4.hpp
src/libdev/machgui/: CMakeLists.txt  GameMenuContext.cpp  GameMenuContext.hpp  IInputRegistry.hpp  InputRegistry.cpp  MachGuiFPCommand.cpp  MachGuiFPCommand.hpp  ProgressIndicator.cpp  ProgressIndicator.hpp  ResolvedUiString.cpp  ResolvedUiString.hpp  actbmpnm.cpp  actbmpnm.hpp  actnamid.cpp  actnamid.hpp  animatio.cpp  animatio.hpp  autodel.cpp  autodel.hpp  bildicns.cpp  bildicns.hpp  bildmenu.cpp  bildmenu.hpp  bmutext.cpp  bmutext.hpp  bufscbut.cpp  bufscbut.hpp  buildbar.cpp  buildbar.hpp  buildmci.cpp  buildmci.hpp  cameras.cpp  cameras.hpp  camscrol.cpp  camscrol.hpp  chatmsgd.cpp  chatmsgd.hpp  chatmsgs.cpp  chatmsgs.hpp  chatwind.cpp  (+301 more)
src/libdev/machlog/: CMakeLists.txt  MachLog1stPersonActiveSquad.cpp  MachLog1stPersonActiveSquad.hpp  MachLog1stPersonOpDispatch.hpp  MachLog1stPersonTargetInfo.hpp  MachineVoiceMailEventID.hpp  RecentEventsManager.cpp  RecentEventsManager.hpp  actanim.cpp  actanim.hpp  actenabl.cpp  actenabl.hpp  actexplo.cpp  actexplo.hpp  actflag.cpp  actflag.hpp  actions.cpp  actions.hpp  actlost.cpp  actlost.hpp  actmaker.cpp  actmaker.hpp  actor.cpp  actor.hpp  actori.cpp  actracec.cpp  actracec.hpp  actreinf.cpp  actreinf.hpp  actsquad.cpp  actsquad.hpp  acttasks.cpp  acttasks.hpp  actvmail.cpp  actvmail.hpp  actwin.cpp  actwin.hpp  actworl.cpp  actworl.hpp  administ.cpp  (+472 more)
src/libdev/machphys/: CMakeLists.txt  MachPhysMoveIndicator.cpp  MachPhysMoveIndicator.hpp  administ.cpp  administ.hpp  admndata.cpp  admndata.hpp  aggrdata.cpp  aggrdata.hpp  aggressr.cpp  aggressr.hpp  apc.cpp  apc.hpp  apcdata.cpp  apcdata.hpp  armourer.cpp  armourer.hpp  artefact.cpp  artefact.hpp  artefact.ipp  artfdata.cpp  artfdata.hpp  artfdata.ipp  attack.cpp  attack.hpp  attacki.cpp  beacdata.cpp  beacdata.hpp  beacon.cpp  beacon.hpp  beam.cpp  beam.hpp  beeblast.cpp  beebomb.cpp  beebomb.hpp  beebombe.cpp  beebombe.hpp  beewave.cpp  beewave.hpp  beeweap.cpp  (+413 more)
src/libdev/mathex/: CMakeLists.txt  abox2d.cpp  abox2d.hpp  abox2d.ipp  (+114 more)
src/projects/: MachinesVersion.cpp.in  MachinesVersion.hpp
(+1331 files in other folders)
